hydro_lang/tests/compile-fail-stable/sliced_missing_arg.rs
../compile-fail/sliced_missing_arg.rs